--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         run: cargo build --target ${{ matrix.target }}
       - name: Run tests
         if: matrix.target != 'aarch64-unknown-linux-gnu' && matrix.target != 'aarch64-pc-windows-msvc' && matrix.target != 'x86_64-pc-windows-msvc'
-        run: cargo test --target ${{ matrix.target }}
+        run: cargo test --all --target ${{ matrix.target }}
 
 
   # ===================================================================
