--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,19 +79,17 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
-      - name: Install musl-tools (Linux musl targets)
-        if: runner.os == 'Linux' && matrix.musl == true
+      - name: Install musl toolchain (Linux x86_64 musl)
+        if: runner.os == 'Linux' && matrix.target == 'x86_64-unknown-linux-musl'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
-      - name: Install musl cross-compile tools (Linux ARM musl)
+          curl -LO https://github.com/cross-tools/musl-cross/releases/download/20250929/x86_64-unknown-linux-musl.tar.xz
+          tar -xf x86_64-unknown-linux-musl.tar.xz
+      - name: Install musl toolchain (Linux ARM musl)
         if: runner.os == 'Linux' && matrix.target == 'aarch64-unknown-linux-musl'
         run: |
           sudo apt-get install -y musl-tools
-          wget https://musl.cc/aarch64-linux-musl-cross.tgz
-          tar -xzf aarch64-linux-musl-cross.tgz
-          sudo mv aarch64-linux-musl-cross /opt/
-          echo "/opt/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
+          curl -LO https://github.com/cross-tools/musl-cross/releases/download/20250929/aarch64-unknown-linux-musl.tar.xz
+          tar -xf aarch64-unknown-linux-musl.tar.xz
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
         with:
@@ -113,12 +111,18 @@ jobs:
           mkdir -p ~/.cargo
           echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config.toml
           echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
+      - name: Configure linker (Linux x86_64 musl)
+        if: runner.os == 'Linux' && matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          mkdir -p ~/.cargo
+          echo '[target.x86_64-unknown-linux-musl]' >> ~/.cargo/config.toml
+          echo 'linker = "'$PWD'/x86_64-unknown-linux-musl/bin/x86_64-unknown-linux-musl-gcc"' >> ~/.cargo/config.toml
       - name: Configure cross-linker (Linux ARM musl)
         if: runner.os == 'Linux' && matrix.target == 'aarch64-unknown-linux-musl'
         run: |
           mkdir -p ~/.cargo
           echo '[target.aarch64-unknown-linux-musl]' >> ~/.cargo/config.toml
-          echo 'linker = "aarch64-linux-musl-gcc"' >> ~/.cargo/config.toml
+          echo 'linker = "'$PWD'/aarch64-unknown-linux-musl/bin/aarch64-unknown-linux-musl-gcc"' >> ~/.cargo/config.toml
       - name: Build project
         run: cargo build --target ${{ matrix.target }}
       - name: Run tests
@@ -196,19 +200,17 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
-      - name: Install musl-tools (Linux musl targets)
-        if: runner.os == 'Linux' && matrix.musl == true
+      - name: Install musl toolchain (Linux x86_64 musl)
+        if: runner.os == 'Linux' && matrix.target == 'x86_64-unknown-linux-musl'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
-      - name: Install musl cross-compile tools (Linux ARM musl)
+          curl -LO https://github.com/cross-tools/musl-cross/releases/download/20250929/x86_64-unknown-linux-musl.tar.xz
+          tar -xf x86_64-unknown-linux-musl.tar.xz
+      - name: Install musl toolchain (Linux ARM musl)
         if: runner.os == 'Linux' && matrix.target == 'aarch64-unknown-linux-musl'
         run: |
           sudo apt-get install -y musl-tools
-          wget https://musl.cc/aarch64-linux-musl-cross.tgz
-          tar -xzf aarch64-linux-musl-cross.tgz
-          sudo mv aarch64-linux-musl-cross /opt/
-          echo "/opt/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
+          curl -LO https://github.com/cross-tools/musl-cross/releases/download/20250929/aarch64-unknown-linux-musl.tar.xz
+          tar -xf aarch64-unknown-linux-musl.tar.xz
       - name: Install NSIS (Windows)
         if: false # runner.os == 'Windows' - Disabled by user request
         run: choco install nsis
@@ -223,12 +225,18 @@ jobs:
           mkdir -p ~/.cargo
           echo '[target.aarch64-unknown-linux-gnu]' >> ~/.cargo/config.toml
           echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
+      - name: Configure linker (Linux x86_64 musl)
+        if: runner.os == 'Linux' && matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          mkdir -p ~/.cargo
+          echo '[target.x86_64-unknown-linux-musl]' >> ~/.cargo/config.toml
+          echo 'linker = "'$PWD'/x86_64-unknown-linux-musl/bin/x86_64-unknown-linux-musl-gcc"' >> ~/.cargo/config.toml
       - name: Configure cross-linker (Linux ARM musl)
         if: runner.os == 'Linux' && matrix.target == 'aarch64-unknown-linux-musl'
         run: |
           mkdir -p ~/.cargo
           echo '[target.aarch64-unknown-linux-musl]' >> ~/.cargo/config.toml
-          echo 'linker = "aarch64-linux-musl-gcc"' >> ~/.cargo/config.toml
+          echo 'linker = "'$PWD'/aarch64-unknown-linux-musl/bin/aarch64-unknown-linux-musl-gcc"' >> ~/.cargo/config.toml
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
       - name: Package artifacts
