--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,16 +107,27 @@ jobs:
         with:
           ndk-version: r26d
           add-to-path: false
-      - name: Configure Android linkers
+      - name: Configure Android toolchain
         if: contains(matrix.target, 'android')
         run: |
-          mkdir -p ~/.cargo
-          echo '[target.aarch64-linux-android]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang"' >> ~/.cargo/config.toml
-          echo '[target.armv7-linux-androideabi]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi34-clang"' >> ~/.cargo/config.toml
-          echo '[target.x86_64-linux-android]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android34-clang"' >> ~/.cargo/config.toml
+          NDK_BIN="${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin"
+          echo "NDK_BIN=$NDK_BIN" >> $GITHUB_ENV
+
+          # Set environment variables for C compiler and archiver (needed by ring crate)
+          echo "CC_aarch64_linux_android=$NDK_BIN/aarch64-linux-android34-clang" >> $GITHUB_ENV
+          echo "AR_aarch64_linux_android=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER=$NDK_BIN/aarch64-linux-android34-clang" >> $GITHUB_ENV
+
+          echo "CC_armv7_linux_androideabi=$NDK_BIN/armv7a-linux-androideabi34-clang" >> $GITHUB_ENV
+          echo "AR_armv7_linux_androideabi=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_ARMV7_LINUX_ANDROIDEABI_LINKER=$NDK_BIN/armv7a-linux-androideabi34-clang" >> $GITHUB_ENV
+
+          echo "CC_x86_64_linux_android=$NDK_BIN/x86_64-linux-android34-clang" >> $GITHUB_ENV
+          echo "AR_x86_64_linux_android=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER=$NDK_BIN/x86_64-linux-android34-clang" >> $GITHUB_ENV
+
+          # Add NDK bin to PATH
+          echo "$NDK_BIN" >> $GITHUB_PATH
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
         with:
@@ -262,16 +273,27 @@ jobs:
         with:
           ndk-version: r26d
           add-to-path: false
-      - name: Configure Android linkers
+      - name: Configure Android toolchain
         if: contains(matrix.target, 'android')
         run: |
-          mkdir -p ~/.cargo
-          echo '[target.aarch64-linux-android]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang"' >> ~/.cargo/config.toml
-          echo '[target.armv7-linux-androideabi]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi34-clang"' >> ~/.cargo/config.toml
-          echo '[target.x86_64-linux-android]' >> ~/.cargo/config.toml
-          echo 'linker = "${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android34-clang"' >> ~/.cargo/config.toml
+          NDK_BIN="${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin"
+          echo "NDK_BIN=$NDK_BIN" >> $GITHUB_ENV
+
+          # Set environment variables for C compiler and archiver (needed by ring crate)
+          echo "CC_aarch64_linux_android=$NDK_BIN/aarch64-linux-android34-clang" >> $GITHUB_ENV
+          echo "AR_aarch64_linux_android=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER=$NDK_BIN/aarch64-linux-android34-clang" >> $GITHUB_ENV
+
+          echo "CC_armv7_linux_androideabi=$NDK_BIN/armv7a-linux-androideabi34-clang" >> $GITHUB_ENV
+          echo "AR_armv7_linux_androideabi=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_ARMV7_LINUX_ANDROIDEABI_LINKER=$NDK_BIN/armv7a-linux-androideabi34-clang" >> $GITHUB_ENV
+
+          echo "CC_x86_64_linux_android=$NDK_BIN/x86_64-linux-android34-clang" >> $GITHUB_ENV
+          echo "AR_x86_64_linux_android=$NDK_BIN/llvm-ar" >> $GITHUB_ENV
+          echo "CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER=$NDK_BIN/x86_64-linux-android34-clang" >> $GITHUB_ENV
+
+          # Add NDK bin to PATH
+          echo "$NDK_BIN" >> $GITHUB_PATH
       - name: Install NSIS (Windows)
         if: false # runner.os == 'Windows' - Disabled by user request
         run: choco install nsis
